--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,17 @@
 /node_modules/
 /public/build/
-
 .DS_Store
+
 .env
 package-lock.json
+
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+**/.history
